--- a/module1/week5/lunes/index.html
+++ b/module1/week5/lunes/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <!-- Link css -->
     <link rel="stylesheet" href="styles.css">
+    <script>
+        window.onload = ()=>{
+            //...
+        }
+    </script>
 </head>
 <body>
 
